--- a/Numpy_.ipynb
+++ b/Numpy_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Numpy .ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNccCJo8e/fwSI4X3cAvY9Z",
+      "authorship_tag": "ABX9TyONflSLwPaRCexLwXtmNVqV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,328 @@
       "cell_type": "code",
       "metadata": {
         "id": "TkkEMnVCwX55",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "7876926a-bd05-42bd-bac1-deab6d958c19"
+      },
+      "source": [
+        "#Numpy Ranged Data\n",
+        "import numpy as np\n",
+        "arr = np.arange(5)\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.arange(5.1)\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.arange(-1, 4)\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.arange(-1.5, 4, 2)\n",
+        "print(repr(arr))"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "array([0, 1, 2, 3, 4])\n",
+            "array([0., 1., 2., 3., 4., 5.])\n",
+            "array([-1,  0,  1,  2,  3])\n",
+            "array([-1.5,  0.5,  2.5])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mDF39HWzxKfw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "198de8bc-b058-4355-ae0b-902c6d5b5a73"
+      },
+      "source": [
+        "#Numpy Arrays\n",
+        "arr = np.array([[0, 1, 2], [3, 4, 5]],\n",
+        "               dtype=np.float32)\n",
+        "print(repr(arr))\n",
+        "print(arr)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "array([[0., 1., 2.],\n",
+            "       [3., 4., 5.]], dtype=float32)\n",
+            "[[0. 1. 2.]\n",
+            " [3. 4. 5.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bfseVmYJxfQL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "02a37499-20ed-4dc0-a936-018aa83c6301"
+      },
+      "source": [
+        "arr = np.array([0, 0.1, 2])\n",
+        "print(arr)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.  0.1 2. ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aqYcMcGox-ip",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "1b2de366-33d4-485b-b9a9-ce6c5e736dbb"
+      },
+      "source": [
+        "#copying\n",
+        "a = np.array([0, 1])\n",
+        "b = np.array([9, 8])\n",
+        "c = a\n",
+        "print('Array a: {}'.format(repr(a)))\n",
+        "c[0] = 5\n",
+        "print('Array a: {}'.format(repr(a)))\n",
+        "\n",
+        "d = b.copy()\n",
+        "d[0] = 6\n",
+        "print('Array b: {}'.format(repr(b)))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Array a: array([0, 1])\n",
+            "Array a: array([5, 1])\n",
+            "Array b: array([9, 8])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wZDuAnTCyrbm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4301ff4a-a007-49ca-c980-d1a880ab7a04"
+      },
+      "source": [
+        "#casting : We cast NumPy arrays through their inherent astype function. \n",
+        "arr = np.array([1,2,3])\n",
+        "float_arr = arr.astype(np.float32)\n",
+        "print(float_arr)\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1. 2. 3.]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fiNE0z6kzSyy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 229
+        },
+        "outputId": "237eb04c-4073-4c96-ab57-945a8186926d"
+      },
+      "source": [
+        "#NAN and #INFY\n",
+        "arr = np.array([np.nan, 1, 2])\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.array([np.nan, 'abc'])\n",
+        "print(repr(arr))\n",
+        "\n",
+        "# Will result in a ValueError\n",
+        "np.array([np.nan, 1, 2], dtype=np.int32)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "array([nan,  1.,  2.])\n",
+            "array(['nan', 'abc'], dtype='<U32')\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-f4784173b403>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Will result in a ValueError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2QT_zrPjzMkO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 246
+        },
+        "outputId": "13f36753-58cf-4293-ae94-1b7bab94c6d6"
+      },
+      "source": [
+        "print(np.inf > 1000000)\n",
+        "\n",
+        "arr = np.array([np.inf, 5])\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.array([-np.inf, 1])\n",
+        "print(repr(arr))\n",
+        "\n",
+        "# Will result in an OverflowError\n",
+        "np.array([np.inf, 3], dtype=np.int32)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "array([inf,  5.])\n",
+            "array([-inf,   1.])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "OverflowError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-e27924d225e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Will result in an OverflowError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mOverflowError\u001b[0m: cannot convert float infinity to integer"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VVxRhuG00-1c",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "d4239dc2-f17e-455f-be8e-3cd63bd1cb1e"
+      },
+      "source": [
+        "#np.linespace:https://www.sharpsightlabs.com/blog/numpy-linspace/\n",
+        "arr = np.linspace(5, 11, num=4)\n",
+        "print(repr(arr))\n",
+        "\n",
+        "arr = np.linspace(5, 11, num=4, endpoint=False)\n",
+        "print(repr(arr))\n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "array([ 5.,  7.,  9., 11.])\n",
+            "array([5. , 6.5, 8. , 9.5])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SQP_-93h2YHA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "c99124a2-be89-4634-a1c0-63dbeff61181"
+      },
+      "source": [
+        "#Reshaping data\n",
+        "arr = np.array([1,2,3,4])\n",
+        "np.reshape(arr,(2,2))\n",
+        "\n",
+        "#np.reshape(arr,(2,3)) //error\n",
+        "#np.reshape(arr,(1,1)) //error"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s4XeKanw4gIB",
         "colab_type": "code",
         "colab": {}
       },
